--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 
 			<div class="profile-image">
 
-				<img src="./images/cat-codespace.png" alt="">
+				<img src="./images/cat-codespace.png" alt="" >
 
 			</div>
-
+			<div class="profile-info">
 			<div class="profile-user-settings">
 
-				<h1 class="profile-user-name">codespace_pets</h1>
+				<h1  class="profile-user-name">codespace_pets</h1>
 
 				<button class="btn profile-edit-btn">Edit Profile</button>
 
@@ -34,7 +34,7 @@
 
 			</div>
 
-			<div class="profile-stats">
+			<div  class="profile-stats">
 
 				<ul>
 					<li><span class="profile-stat-count">549</span> posts</li>
@@ -47,9 +47,9 @@
 			<div class="profile-bio">
 
 				<p><span class="profile-real-name">CodeSpace Pets 😺</span> The hangout place for the best pets 🐕🐇🐦</p>
-
+			
 			</div>
-
+			</div>
 		</div>
 		<!-- End of profile section -->
 
@@ -60,10 +60,10 @@
 
 <main>
 
-	<div class="container">
+	<div   class="main-container">
 
 		<div class="gallery">
-
+			<div class="gallery-item1">
 			<div class="gallery-item" tabindex="0">
 
 				<img src="./images/bailey.PNG" class="gallery-image" alt="">
@@ -78,7 +78,7 @@
 				</div>
 
 			</div>
-
+			
 			<div class="gallery-item" tabindex="0">
 
 				<img src="./images/startlett.jpg" class="gallery-image" alt="">
@@ -112,9 +112,9 @@
 					</ul>
 
 				</div>
-
+				</div>
 			</div>
-
+			<div class="gallery-item2">
 			<div class="gallery-item" tabindex="0">
 
 				<img src="./images/scarab.png" class="gallery-image" alt="">
@@ -146,7 +146,7 @@
 
 				</div>
 
-				<div class="gallery-item-info">
+				<div  class="gallery-item-info">
 
 					<ul>
 						<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 47</li>
@@ -169,9 +169,9 @@
 					</ul>
 
 				</div>
-
+				</div>
 			</div>
-
+			<div class="gallery-item3">
 			<div class="gallery-item" tabindex="0">
 
 				<img src="./images/jarrod.jpg" class="gallery-image" alt="">
@@ -226,9 +226,9 @@
 					</ul>
 
 				</div>
-
+				</div>
 			</div>
-
+			<div class="gallery-item4">
 			<div class="gallery-item" tabindex="0">
 
 				<img src="./images/forrest.jpg" class="gallery-image" alt="">
@@ -279,7 +279,7 @@
 				</div>
 
 			</div>
-
+			</div>
 		</div>
 		<!-- End of gallery -->
 
