obtained a reasonable layout in grid by positioning each img with grid properties

--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
 	<div   class="main-container">
 
 		<div class="gallery">
-			<div class="gallery-item1">
-			<div class="gallery-item" tabindex="0">
+			<div class="gallery-item">
+			<div class="gallery-item1" tabindex="0">
 
 				<img src="./images/bailey.PNG" class="gallery-image" alt="">
 
-				<div class="gallery-item-info">
+				<div class="gallery-item-info1">
 
 					<ul>
 						<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 56</li>
@@ -79,11 +79,11 @@
 
 			</div>
 			
-			<div class="gallery-item" tabindex="0">
+			<div class="gallery-item2" tabindex="0">
 
 				<img src="./images/startlett.jpg" class="gallery-image" alt="">
 
-				<div class="gallery-item-info">
+				<div class="gallery-item-info2">
 
 					<ul>
 						<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 89</li>
@@ -94,7 +94,7 @@
 
 			</div>
 
-			<div class="gallery-item" tabindex="0">
+			<div class="gallery-item3" tabindex="0">
 
 				<img src="./images/mr-chomsky.png" class="gallery-image" alt="">
 
@@ -104,7 +104,7 @@
 
 				</div>
 
-				<div class="gallery-item-info">
+				<div class="gallery-item-info3">
 
 					<ul>
 						<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 42</li>
@@ -114,8 +114,8 @@
 				</div>
 				</div>
 			</div>
-			<div class="gallery-item2">
-			<div class="gallery-item" tabindex="0">
+			
+			<div class="gallery-item4" tabindex="0">
 
 				<img src="./images/scarab.png" class="gallery-image" alt="">
 
@@ -125,7 +125,7 @@
 
 				</div>
 
-				<div class="gallery-item-info">
+				<div class="gallery-item-info4">
 
 					<ul>
 						<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 38</li>
@@ -136,7 +136,7 @@
 
 			</div>
 
-			<div class="gallery-item" tabindex="0">
+			<div class="gallery-item5" tabindex="0">
 
 				<img src="./images/baronnashor.png" class="gallery-image" alt="">
 
@@ -146,7 +146,7 @@
 
 				</div>
 
-				<div  class="gallery-item-info">
+				<div  class="gallery-item-info5">
 
 					<ul>
 						<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 47</li>
@@ -157,11 +157,11 @@
 
 			</div>
 
-			<div class="gallery-item" tabindex="0">
+			<div class="gallery-item6" tabindex="0">
 
 				<img src="./images/gabrielle.jpg" class="gallery-image" alt="">
 
-				<div class="gallery-item-info">
+				<div class="gallery-item-info6">
 
 					<ul>
 						<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 94</li>
@@ -171,7 +171,7 @@
 				</div>
 				</div>
 			</div>
-			<div class="gallery-item3">
+			<div class="gallery-item7">
 			<div class="gallery-item" tabindex="0">
 
 				<img src="./images/jarrod.jpg" class="gallery-image" alt="">
@@ -182,7 +182,7 @@
 
 				</div>
 
-				<div class="gallery-item-info">
+				<div class="gallery-item-info7">
 
 					<ul>
 						<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 52</li>
@@ -193,11 +193,11 @@
 
 			</div>
 
-			<div class="gallery-item" tabindex="0">
+			<div class="gallery-item8" tabindex="0">
 
 				<img src="./images/mr_goose.jpg" class="gallery-image" alt="">
 
-				<div class="gallery-item-info">
+				<div class="gallery-item-info8">
 
 					<ul>
 						<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 66</li>
@@ -208,7 +208,7 @@
 
 			</div>
 
-			<div class="gallery-item" tabindex="0">
+			<div class="gallery-item9" tabindex="0">
 
 				<img src="./images/dog-codespace.png" class="gallery-image" alt="">
 
@@ -218,7 +218,7 @@
 
 				</div>
 
-				<div class="gallery-item-info">
+				<div class="gallery-item-info9">
 
 					<ul>
 						<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 45</li>
@@ -228,12 +228,12 @@
 				</div>
 				</div>
 			</div>
-			<div class="gallery-item4">
+			<div class="gallery-item10">
 			<div class="gallery-item" tabindex="0">
 
 				<img src="./images/forrest.jpg" class="gallery-image" alt="">
 
-				<div class="gallery-item-info">
+				<div class="gallery-item-info10">
 
 					<ul>
 						<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 34</li>
@@ -244,11 +244,11 @@
 
 			</div>
 
-			<div class="gallery-item" tabindex="0">
+			<div class="gallery-item11" tabindex="0">
 
 				<img src="./images/louise.jpg" class="gallery-image" alt="">
 
-				<div class="gallery-item-info">
+				<div class="gallery-item-info11">
 
 					<ul>
 						<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 41</li>
@@ -259,7 +259,7 @@
 
 			</div>
 
-			<div class="gallery-item" tabindex="0">
+			<div class="gallery-item12" tabindex="0">
 
 				<img src="./images/tired.jpg" class="gallery-image" alt="">
 
@@ -269,7 +269,7 @@
 
 				</div>
 
-				<div class="gallery-item-info">
+				<div class="gallery-item-info12">
 
 					<ul>
 						<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 30</li>
