--- a/index.html
+++ b/index.html
@@ -63,222 +63,223 @@
 	<div   class="main-container">
 
 		<div class="gallery">
-			<div class="gallery-item">
-			<div class="gallery-item1" tabindex="0">
+			<div class="row1">
+				<div class="gallery-item" tabindex="0">
 
-				<img src="./images/bailey.PNG" class="gallery-image" alt="">
+					<img src="./images/bailey.PNG" class="gallery-image" alt="">
 
-				<div class="gallery-item-info1">
+					<div class="gallery-item-info">
 
-					<ul>
-						<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 56</li>
-						<li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fa fa-comment" aria-hidden="true"></i> 2</li>
-					</ul>
+						<ul>
+							<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 56</li>
+							<li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fa fa-comment" aria-hidden="true"></i> 2</li>
+						</ul>
+
+					</div>
 
 				</div>
-
-			</div>
 			
-			<div class="gallery-item2" tabindex="0">
+				<div class="gallery-item" tabindex="0">
 
-				<img src="./images/startlett.jpg" class="gallery-image" alt="">
+					<img src="./images/startlett.jpg" class="gallery-image" alt="">
 
-				<div class="gallery-item-info2">
+					<div class="gallery-item-info">
 
-					<ul>
-						<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 89</li>
-						<li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fa fa-comment" aria-hidden="true"></i> 5</li>
-					</ul>
+						<ul>
+							<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 89</li>
+							<li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fa fa-comment" aria-hidden="true"></i> 5</li>
+						</ul>
 
-				</div>
-
-			</div>
-
-			<div class="gallery-item3" tabindex="0">
-
-				<img src="./images/mr-chomsky.png" class="gallery-image" alt="">
-
-				<div class="gallery-item-type">
-
-					<span class="visually-hidden">Gallery</span><i class="fa fa-clone" aria-hidden="true"></i>
+					</div>
 
 				</div>
 
-				<div class="gallery-item-info3">
+				<div class="gallery-item" tabindex="0">
 
-					<ul>
-						<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 42</li>
-						<li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fa fa-comment" aria-hidden="true"></i> 1</li>
-					</ul>
+					<img src="./images/mr-chomsky.png" class="gallery-image" alt="">
 
-				</div>
-				</div>
-			</div>
-			
-			<div class="gallery-item4" tabindex="0">
+					<div class="gallery-item-type">
 
-				<img src="./images/scarab.png" class="gallery-image" alt="">
+						<span class="visually-hidden">Gallery</span><i class="fa fa-clone" aria-hidden="true"></i>
 
-				<div class="gallery-item-type">
+					</div>
 
-					<span class="visually-hidden">Video</span><i class="fa fa-video" aria-hidden="true"></i>
+					<div class="gallery-item-info">
 
-				</div>
+						<ul>
+							<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 42</li>
+							<li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fa fa-comment" aria-hidden="true"></i> 1</li>
+						</ul>
 
-				<div class="gallery-item-info4">
-
-					<ul>
-						<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 38</li>
-						<li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fa fa-comment" aria-hidden="true"></i> 0</li>
-					</ul>
-
-				</div>
-
-			</div>
-
-			<div class="gallery-item5" tabindex="0">
-
-				<img src="./images/baronnashor.png" class="gallery-image" alt="">
-
-				<div class="gallery-item-type">
-
-					<span class="visually-hidden">Gallery</span><i class="fa fa-clone" aria-hidden="true"></i>
-
-				</div>
-
-				<div  class="gallery-item-info5">
-
-					<ul>
-						<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 47</li>
-						<li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fa fa-comment" aria-hidden="true"></i> 1</li>
-					</ul>
-
-				</div>
-
-			</div>
-
-			<div class="gallery-item6" tabindex="0">
-
-				<img src="./images/gabrielle.jpg" class="gallery-image" alt="">
-
-				<div class="gallery-item-info6">
-
-					<ul>
-						<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 94</li>
-						<li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fa fa-comment" aria-hidden="true"></i> 3</li>
-					</ul>
-
-				</div>
+					</div>
 				</div>
 			</div>
-			<div class="gallery-item7">
-			<div class="gallery-item" tabindex="0">
+	
+			<div class="row2">
+				<div class="gallery-item" tabindex="0">
 
-				<img src="./images/jarrod.jpg" class="gallery-image" alt="">
+					<img src="./images/scarab.png" class="gallery-image" alt="">
 
-				<div class="gallery-item-type">
+					<div class="gallery-item-type">
 
-					<span class="visually-hidden">Gallery</span><i class="fa fa-clone" aria-hidden="true"></i>
+						<span class="visually-hidden">Video</span><i class="fa fa-video" aria-hidden="true"></i>
+
+					</div>
+
+					<div class="gallery-item-info">
+
+						<ul>
+							<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 38</li>
+							<li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fa fa-comment" aria-hidden="true"></i> 0</li>
+						</ul>
+
+					</div>
 
 				</div>
 
-				<div class="gallery-item-info7">
+				<div class="gallery-item" tabindex="0">
 
-					<ul>
-						<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 52</li>
-						<li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fa fa-comment" aria-hidden="true"></i> 4</li>
-					</ul>
+					<img src="./images/baronnashor.png" class="gallery-image" alt="">
+
+					<div class="gallery-item-type">
+
+						<span class="visually-hidden">Gallery</span><i class="fa fa-clone" aria-hidden="true"></i>
+
+					</div>
+
+					<div  class="gallery-item-info">
+
+						<ul>
+							<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 47</li>
+							<li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fa fa-comment" aria-hidden="true"></i> 1</li>
+						</ul>
+
+					</div>
 
 				</div>
 
+				<div class="gallery-item" tabindex="0">
+
+					<img src="./images/gabrielle.jpg" class="gallery-image" alt="">
+
+					<div class="gallery-item-info">
+
+						<ul>
+							<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 94</li>
+							<li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fa fa-comment" aria-hidden="true"></i> 3</li>
+						</ul>
+
+					</div>
+				</div>
+			</div>
+			<div class="row3">
+				<div class="gallery-item" tabindex="0">
+
+					<img src="./images/jarrod.jpg" class="gallery-image" alt="">
+
+					<div class="gallery-item-type">
+
+						<span class="visually-hidden">Gallery</span><i class="fa fa-clone" aria-hidden="true"></i>
+
+					</div>
+
+					<div class="gallery-item-info">
+
+						<ul>
+							<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 52</li>
+							<li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fa fa-comment" aria-hidden="true"></i> 4</li>
+						</ul>
+
+					</div>
+
+				</div>
+
+				<div class="gallery-item" tabindex="0">
+
+					<img src="./images/mr_goose.jpg" class="gallery-image" alt="">
+
+					<div class="gallery-item-info">
+
+						<ul>
+							<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 66</li>
+							<li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fa fa-comment" aria-hidden="true"></i> 2</li>
+						</ul>
+
+					</div>
+
+				</div>
+
+				<div class="gallery-item" tabindex="0">
+
+					<img src="./images/dog-codespace.png" class="gallery-image" alt="">
+
+					<div class="gallery-item-type">
+
+						<span class="visually-hidden">Gallery</span><i class="fa fa-clone" aria-hidden="true"></i>
+
+					</div>
+
+					<div class="gallery-item-info">
+
+						<ul>
+							<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 45</li>
+							<li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fa fa-comment" aria-hidden="true"></i> 0</li>
+						</ul>
+
+					</div>
+				</div>
 			</div>
 
-			<div class="gallery-item8" tabindex="0">
+		    <div class="row4">
+				<div class="gallery-item" tabindex="0">
 
-				<img src="./images/mr_goose.jpg" class="gallery-image" alt="">
+					<img src="./images/forrest.jpg" class="gallery-image" alt="">
 
-				<div class="gallery-item-info8">
+					<div class="gallery-item-info">
 
-					<ul>
-						<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 66</li>
-						<li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fa fa-comment" aria-hidden="true"></i> 2</li>
-					</ul>
+						<ul>
+							<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 34</li>
+							<li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fa fa-comment" aria-hidden="true"></i> 1</li>
+						</ul>
+
+					</div>
+				</div>
+
+				<div class="gallery-item" tabindex="0">
+
+					<img src="./images/louise.jpg" class="gallery-image" alt="">
+
+					<div class="gallery-item-info">
+
+						<ul>
+							<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 41</li>
+							<li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fa fa-comment" aria-hidden="true"></i> 0</li>
+						</ul>
+
+					</div>
 
 				</div>
 
-			</div>
+				<div class="gallery-item" tabindex="0">
 
-			<div class="gallery-item9" tabindex="0">
+					<img src="./images/tired.jpg" class="gallery-image" alt="">
 
-				<img src="./images/dog-codespace.png" class="gallery-image" alt="">
+					<div class="gallery-item-type">
 
-				<div class="gallery-item-type">
+						<span class="visually-hidden">Video</span><i class="fa fa-video" aria-hidden="true"></i>
 
-					<span class="visually-hidden">Gallery</span><i class="fa fa-clone" aria-hidden="true"></i>
+					</div>
 
-				</div>
+					<div class="gallery-item-info">
 
-				<div class="gallery-item-info9">
+						<ul>
+							<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 30</li>
+							<li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fa fa-comment" aria-hidden="true"></i> 2</li>
+						</ul>
 
-					<ul>
-						<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 45</li>
-						<li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fa fa-comment" aria-hidden="true"></i> 0</li>
-					</ul>
-
-				</div>
-				</div>
-			</div>
-			<div class="gallery-item10">
-			<div class="gallery-item" tabindex="0">
-
-				<img src="./images/forrest.jpg" class="gallery-image" alt="">
-
-				<div class="gallery-item-info10">
-
-					<ul>
-						<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 34</li>
-						<li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fa fa-comment" aria-hidden="true"></i> 1</li>
-					</ul>
+					</div>
 
 				</div>
-
-			</div>
-
-			<div class="gallery-item11" tabindex="0">
-
-				<img src="./images/louise.jpg" class="gallery-image" alt="">
-
-				<div class="gallery-item-info11">
-
-					<ul>
-						<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 41</li>
-						<li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fa fa-comment" aria-hidden="true"></i> 0</li>
-					</ul>
-
-				</div>
-
-			</div>
-
-			<div class="gallery-item12" tabindex="0">
-
-				<img src="./images/tired.jpg" class="gallery-image" alt="">
-
-				<div class="gallery-item-type">
-
-					<span class="visually-hidden">Video</span><i class="fa fa-video" aria-hidden="true"></i>
-
-				</div>
-
-				<div class="gallery-item-info12">
-
-					<ul>
-						<li class="gallery-item-likes"><span class="visually-hidden">Likes:</span><i class="fa fa-heart" aria-hidden="true"></i> 30</li>
-						<li class="gallery-item-comments"><span class="visually-hidden">Comments:</span><i class="fa fa-comment" aria-hidden="true"></i> 2</li>
-					</ul>
-
-				</div>
-
-			</div>
 			</div>
 		</div>
 		<!-- End of gallery -->
