--- a/index.html
+++ b/index.html
@@ -284,13 +284,15 @@
 		</div>
 		<!-- End of gallery -->
 
-		<div class="loader"></div>
+		<!--<div class="loader"></div>-->
 		
 	</div>
 	<!-- End of container -->
 
 </main>
-
+	<footer class="load">
+		<div class="loader"></div>
+	</footer>
     
 </body>
 </html>
